--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,11 @@ plugins {
 }
 
 android {
+
     namespace = "com.example.exercise_4"
+
+    namespace = "com.example.cc206_technodeskworks"
+
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -22,6 +26,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.exercise_4"
+
+        applicationId = "com.example.cc206_technodeskworks"
+
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
