--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,21 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
+
             VALUE "FileDescription", "exercise_4" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "exercise_4" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "exercise_4.exe" "\0"
             VALUE "ProductName", "exercise_4" "\0"
+
+            VALUE "FileDescription", "cc206_technodeskworks" "\0"
+            VALUE "FileVersion", VERSION_AS_STRING "\0"
+            VALUE "InternalName", "cc206_technodeskworks" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "OriginalFilename", "cc206_technodeskworks.exe" "\0"
+            VALUE "ProductName", "cc206_technodeskworks" "\0"
+
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
