--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,11 @@ plugins {
 }
 
 android {
+
     namespace = "com.example.exercisce_unit4"
+
+    namespace = "com.example.exercise_4"
+
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -21,7 +25,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+
         applicationId = "com.example.exercisce_unit4"
+
+        applicationId = "com.example.exercise_4"
+
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
