Exercise 4 Cabantug, Maquiran, Nacis

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,26 @@
 .DS_Store
 .atom/
 
+
 .buildlog/
 .history
 .svn/
+
+
+
 
 .build/
 .buildlog/
 .history
 .svn/
 .swiftpm/
+
+
+
+
+.buildlog/
+.history
+.svn/
 
 migrate_working_dir/
 
