--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,11 +8,18 @@ plugins {
 android {
 
 
+
     namespace = "com.example.exercise_4"
 
     namespace = "com.example.cc206_technodeskworks"
 
     namespace = "com.example.exercisce_unit4"
+
+
+    namespace = "com.example.exercisce_unit4"
+
+    namespace = "com.example.exercise_4"
+
 
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
@@ -29,12 +36,19 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
 
+
         applicationId = "com.example.exercise_4"
 
         applicationId = "com.example.cc206_technodeskworks"
 
 
         applicationId = "com.example.exercisce_unit4"
+
+
+        applicationId = "com.example.exercisce_unit4"
+
+        applicationId = "com.example.exercise_4"
+
 
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
