--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,18 @@
 
 
+
 name: exercise_4
 
 name: cc206_technodeskworks
 
 
 name: exercisce_unit4
+
+
+
+name: exercisce_unit4
+
+name: exercise_4
 
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -28,9 +35,14 @@ version: 1.0.0+1
 
 environment:
 
+
   sdk: ^3.5.2
 
+
   sdk: ^3.6.0-149.3.beta
+
+  sdk: ^3.5.2
+
 
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -40,7 +52,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
   gradient_elevated_button : ^0.0.5
+
   flutter:
     sdk: flutter
 
@@ -48,6 +62,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
   gradient_elevated_button: ^1.0.0
 
 
@@ -55,7 +70,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+
   curved_navigation_bar: ^1.0.6
+
 
 
 dev_dependencies:
@@ -75,6 +92,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+
   uses-material-design: true
   assets:
   - images/
@@ -90,7 +108,11 @@ flutter:
     - assets/images/TechnoDeskWorks.png
     - assets/images/facebook.png
     - assets/images/google.png
-    - assets/images/linkedin.png
+
+  uses-material-design: true
+  assets:
+  - images/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
