--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -2,6 +2,7 @@
 cmake_minimum_required(VERSION 3.14)
 
 
+
 project(exercise_4 LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
@@ -10,12 +11,20 @@ set(BINARY_NAME "exercise_4")
 
 project(cc206_technodeskworks LANGUAGES CXX)
 
+
 project(exercisce_unit4 LANGUAGES CXX)
 
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
 set(BINARY_NAME "exercisce_unit4")
+
+project(exercise_4 LANGUAGES CXX)
+
+# The name of the executable created for the application. Change this to change
+# the on-disk name of your application.
+set(BINARY_NAME "exercise_4")
+
 
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
