--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 
 
 
+
 name: exercise_4
 
 name: cc206_technodeskworks
@@ -13,6 +14,12 @@ name: exercisce_unit4
 name: exercisce_unit4
 
 name: exercise_4
+
+
+name: exercisce_unit4
+
+name: exercise_4
+
 
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -36,6 +43,7 @@ version: 1.0.0+1
 environment:
 
 
+
   sdk: ^3.5.2
 
 
@@ -43,6 +51,11 @@ environment:
 
   sdk: ^3.5.2
 
+
+
+  sdk: ^3.6.0-149.3.beta
+
+  sdk: ^3.5.2
 
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -55,6 +68,7 @@ dependencies:
 
   gradient_elevated_button : ^0.0.5
 
+
   flutter:
     sdk: flutter
 
@@ -62,6 +76,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
 
   gradient_elevated_button: ^1.0.0
 
@@ -73,6 +88,11 @@ dependencies:
 
   curved_navigation_bar: ^1.0.6
 
+
+
+  curved_navigation_bar: ^1.0.6
+
+  gradient_elevated_button: ^1.0.0
 
 
 dev_dependencies:
@@ -93,9 +113,11 @@ dev_dependencies:
 flutter:
 
 
+
   uses-material-design: true
   assets:
   - images/
+
 
 
   # The following line ensures that the Material Icons font is
@@ -108,6 +130,10 @@ flutter:
     - assets/images/TechnoDeskWorks.png
     - assets/images/facebook.png
     - assets/images/google.png
+
+
+    - assets/images/linkedin.png
+
 
   uses-material-design: true
   assets:
