Unit6_Horlador_Lim

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,9 +6,13 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 
+
 	<string>Exercise 4</string>
 
 	<string>Cc206 Technodeskworks</string>
+
+
+	<string>Exercisce Unit4</string>
 
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
@@ -18,9 +22,13 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 
+
 	<string>exercise_4</string>
 
 	<string>cc206_technodeskworks</string>
+
+
+	<string>exercisce_unit4</string>
 
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
