--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,15 @@
 {
 
+
     "name": "exercise_4",
     "short_name": "exercise_4",
 
     "name": "cc206_technodeskworks",
     "short_name": "cc206_technodeskworks",
+
+
+    "name": "exercisce_unit4",
+    "short_name": "exercisce_unit4",
 
     "start_url": ".",
     "display": "standalone",
