--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
 
+
         android:label="exercise_4"
 
         android:label="cc206_technodeskworks"
+
+
+        android:label="exercisce_unit4"
 
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
