--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -5,15 +5,19 @@ project(runner LANGUAGES CXX)
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
 
+
 set(BINARY_NAME "exercise_4")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
 set(APPLICATION_ID "com.example.exercise_4")
 
 set(BINARY_NAME "cc206_technodeskworks")
+
+set(BINARY_NAME "exercisce_unit4")
+
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.cc206_technodeskworks")
+set(APPLICATION_ID "com.example.exercisce_unit4")
 
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
