--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -6,6 +6,7 @@
 
 // The application's name. By default this is also the title of the Flutter window.
 
+
 PRODUCT_NAME = exercise_4
 
 // The application's bundle identifier
@@ -13,8 +14,10 @@ PRODUCT_BUNDLE_IDENTIFIER = com.example.exercise4
 
 PRODUCT_NAME = cc206_technodeskworks
 
+PRODUCT_NAME = exercisce_unit4
+
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.cc206Technodeskworks
+PRODUCT_BUNDLE_IDENTIFIER = com.example.exercisceUnit4
 
 
 // The copyright displayed in application information
