--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,11 @@
 
+
 name: exercise_4
 
 name: cc206_technodeskworks
+
+
+name: exercisce_unit4
 
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -36,6 +40,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  gradient_elevated_button : ^0.0.5
   flutter:
     sdk: flutter
 
@@ -49,6 +54,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  curved_navigation_bar: ^1.0.6
 
 
 dev_dependencies:
@@ -79,9 +86,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/TechnoDeskWorks.png
+    - assets/images/facebook.png
+    - assets/images/google.png
+    - assets/images/linkedin.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
