--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -91,6 +91,7 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
 
+
             VALUE "FileDescription", "exercise_4" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "exercise_4" "\0"
@@ -99,11 +100,19 @@ BEGIN
             VALUE "ProductName", "exercise_4" "\0"
 
             VALUE "FileDescription", "cc206_technodeskworks" "\0"
+
+            VALUE "FileDescription", "exercisce_unit4" "\0"
+
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "cc206_technodeskworks" "\0"
+            VALUE "InternalName", "exercisce_unit4" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+
             VALUE "OriginalFilename", "cc206_technodeskworks.exe" "\0"
             VALUE "ProductName", "cc206_technodeskworks" "\0"
+
+
+            VALUE "OriginalFilename", "exercisce_unit4.exe" "\0"
+            VALUE "ProductName", "exercisce_unit4" "\0"
 
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
