--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "json.format.enable": true
+    "json.format.enable": true,
+    "cSpell.words": [
+        "allprojects",
+        "buildscript"
+    ]
 }
