--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Use the correct version of the Android Gradle plugin
+        classpath 'com.android.tools.build:gradle:8.10.2' // Update as per your project's requirements
+        classpath 'com.google.gms:google-services:4.4.2' // Google Services plugin
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -5,14 +17,17 @@ allprojects {
     }
 }
 
+// Custom build directories
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
+// subprojects {
+//     project.evaluationDependsOn(":app")
+// }
 
+// Clean task
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
