Firebase Validation and API

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to allow you to pick images for your portfolio.</string>
+
+<key>NSCameraUsageDescription</key>
+<string>We need access to your camera to take photos for your portfolio.</string>
 </dict>
 </plist>
