--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  gradient_elevated_button : ^0.0.5
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.3.3
+  gradient_elevated_button : ^1.0.0
+  provider: ^6.1.2
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
+  cloud_firestore: ^5.5.0
+  table_calendar: ^3.1.2
+  image_picker: ^1.1.2
+  http: ^1.0.0
+  
+
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
