--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,9 +8,7 @@ plugins {
 }
 
 android {
-
-    namespace = "com.example.exercise_4"
-
+    namespace = "com.example.exercisce_unit4"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -26,18 +24,8 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-
-
         applicationId = "com.example.exercisce_unit4"
-
-        applicationId = "com.example.exercise_4"
-
-
-        applicationId = "com.example.exercise_4"
-
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
+        // minSdkV6ersion = 21
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
