--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,4 @@
-
 name: exercisce_unit4
-
-name: exercise_4
-
-
-name: exercise_4
-
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -26,14 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-
-
   sdk: ^3.6.0-149.3.beta
-
-  sdk: ^3.5.2
-
-
-  sdk: ^3.5.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,15 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
-
-  gradient_elevated_button : ^0.0.5
-
-
-
+  firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
   flutter:
     sdk: flutter
-
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,17 +41,13 @@ dependencies:
   gradient_elevated_button : ^1.0.0
   provider: ^6.1.2
   cupertino_icons: ^1.0.8
-
   curved_navigation_bar: ^1.0.6
   cloud_firestore: ^5.5.0
   table_calendar: ^3.1.2
   image_picker: ^1.1.2
   http: ^1.0.0
+  
 
-
-
-
-  gradient_elevated_button: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -88,8 +66,6 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -97,17 +73,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/TechnoDeskWorks.png
-    - assets/images/facebook.png
-    - assets/images/google.png
-    - assets/images/linkedin.png
-
-
-  uses-material-design: true
-  assets:
-  - images/
-
-
+    - images/TechnoDeskWorks.png
+    - images/facebook.png
+    - images/google.png
+    - images/linkedin.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
