Move Navigation Rename Image

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,10 +73,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/TechnoDeskWorks.png
-    - assets/images/facebook.png
-    - assets/images/google.png
-    - assets/images/linkedin.png
+    - images/TechnoDeskWorks.png
+    - images/facebook.png
+    - images/google.png
+    - images/linkedin.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
