--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,4 @@
-
-
-
-
-name: exercise_4
-
-name: cc206_technodeskworks
-
-
 name: exercisce_unit4
-
-
-
-name: exercisce_unit4
-
-name: exercise_4
-
-
-name: exercisce_unit4
-
-name: exercise_4
-
-
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -43,18 +21,6 @@ version: 1.0.0+1
 environment:
   sdk: ^3.6.0-149.3.beta
 
-
-  sdk: ^3.6.0-149.3.beta
-
-  sdk: ^3.5.2
-
-
-
-  sdk: ^3.6.0-149.3.beta
-
-  sdk: ^3.5.2
-
-
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -66,7 +32,7 @@ dependencies:
   firebase_auth: ^5.3.3
   flutter:
     sdk: flutter
-
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -80,8 +46,7 @@ dependencies:
   table_calendar: ^3.1.2
   image_picker: ^1.1.2
   http: ^1.0.0
-
-
+  
 
 
 dev_dependencies:
@@ -108,10 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/TechnoDeskWorks.png
-    - images/facebook.png
-    - images/google.png
-    - images/linkedin.png
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
