--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,9 +4,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        // Use the correct version of the Android Gradle plugin
-        classpath 'com.android.tools.build:gradle:8.10.2' // Update as per your project's requirements
-        classpath 'com.google.gms:google-services:4.4.2' // Google Services plugin
+        // Android Gradle Plugin
+        classpath 'com.android.tools.build:gradle:8.1.1'
+        // Google Services Plugin
+        classpath 'com.google.gms:google-services:4.4.2'
+        // Kotlin Gradle Plugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
     }
 }
 
