--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "cSpell.words": [
         "allprojects",
         "buildscript"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
