--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0-149.3.beta
+  sdk: ">=3.5.1 <4.0.0"
+
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,7 +33,7 @@ dependencies:
   firebase_auth: ^5.3.3
   flutter:
     sdk: flutter
-    
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,19 +47,27 @@ dependencies:
   table_calendar: ^3.1.2
   image_picker: ^1.1.2
   http: ^1.0.0
-  
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.14.1"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/play_store_512.png"
+  adaptive_icon_background: "assets/play_store_512.png"
+  adaptive_icon_foreground: "assets/play_store_512.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
+  # activated in the analysis_options.yaml file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
